project/stage/testing/semantic/semantic_tests/reject/void_index.ul
void main() {
    int [10] arr;
    arr[foo()];
}
void foo(){}
